# Sayuniq

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.json  docker-compose.yml  example.env  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  setenv.sh
Sayuniq/: __init__.py  __vars__.py  main.py
Sayuniq/helper/: SAss.py  __init__.py  anime_sites.py  database_Tests.py  database_utils.py  downloader.py  fix_aiohttp_asyncio.py  logs_utils.py  loop_in_thread.py  mongo_connect.py  utils.py
Sayuniq/helper/chapters/: chapters_pg.py
Sayuniq/helper/hps/: helpers.py  pagination.py
Sayuniq/helper/logger_configs/: logger_config.py
Sayuniq/helper/servers/: __init__.py  server_utils.py  site_servers.py
Sayuniq/plugins/: copy_paste.py  edit_database.py  new_admins.py  queues_tests.py  send_video_stream_test.py  start.py  uplogs.py  utilsss.py
Sayuniq/strings/: __init__.py  strings.py
source/: __init__.py  __main__.py  config.py
source/helpers/: __init__.py  anime_sites.py  database_utils.py  downloader.py  logger_config.py  logs_utils.py  loop_in_thread.py  mongo_connect.py  site_assistant.py  utils.py
source/helpers/chapters/: chapters_page.py
source/helpers/hps/: helpers.py  pagination.py
source/helpers/servers/: __init__.py  server_utils.py  site_servers.py
source/locales/: __init__.py  strings.py
source/plugins/: copy_paste.py  develop.py  edit_database.py  emergency_download.py  new_admins.py  start.py  uplogs.py
strings/: es.yml
