[tool.poetry]
name = "sayuniq"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = ">=23.2.1,<23.3.0"
aiohttp = {version = ">=3.9.5,<3.10.0", extras = ["speedups"]}
beautifulsoup4 = ">=4.12.3,<4.13.0"
cloudscraper = ">=1.2.71,<1.3.0"
dnspython = "^2.6.1"
ffmpeg-python = "^0.2.0"
hydrogram = ">=0.1.4,<0.2.0"
moviepy = ">=2.0.0.dev2"
pymongo = ">=4.6.3,<4.7.0"
pyromod = ">=3.1.6,<3.2.0"
python-decouple = "^3.8"
pillow = ">=10.3.0,<10.4.0"
pyyaml = ">=6.0.1,<6.1.0"
tgcrypto = "^1.2.5"
yt-dlp = "^2024.4.9"
wget = "^3.2"


[tool.poetry.group.dev.dependencies]
poetry-plugin-up = "^0.7.1"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
